[package]
name = "pyauto-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["modern-ui"]
modern-ui = ["dep:eframe", "dep:egui"]

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui = { version = "0.33", default-features = false, features = ["default_fonts"], optional = true }
enigo = "0.6"
image = "0.24"
screenshots = "0.8"
thiserror = "2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Controls", "Win32_UI_Controls_Dialogs", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[[bin]]
name = "pyauto-rs"
path = "src/main.rs"
required-features = ["modern-ui"]

[[bin]]
name = "pyauto-rs-win7-native"
path = "src/bin/win7_native.rs"
